--- a/Surreality/Launch Screen.storyboard
+++ b/Surreality/Launch Screen.storyboard
@@ -29,7 +29,8 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.83535545020903068" green="0.5560161364196522" blue="0.19324576964216947" alpha="0.86188439703606934" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.94122928380000004" green="0.8227677298869378" blue="0.76909099064863085" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="Q3B-4B-g5h"/>
